--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "ecgclinicalcases-69309",
-    "prod": "ecg-corner",
-    "library": "ecg-library"
-  },
-  "targets": {}
+    "default": "ecg-library"
+  }
 }
